--- a/gathungu_test.ipynb
+++ b/gathungu_test.ipynb
@@ -489,6 +489,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -592,6 +599,838 @@
     "marks_sum=sum(marks)\n",
     "print(\"The total marks you got is:\",marks_sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Lovelace\n",
+      "ADA LOVELACE\n",
+      "ada lovelace\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"ada lovelace\"\n",
+    "print(name.title())\n",
+    "print(name.upper())\n",
+    "print(name.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Lovelace\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name=\"ada\"\n",
+    "last_name=\"lovelace\"\n",
+    "full_name=f\"{first_name} {last_name}\"\n",
+    "print(full_name.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo my name is, Ada Lovelace!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name=\"ada\"\n",
+    "last_name=\"lovelace\"\n",
+    "full_name=f\"{first_name} {last_name}\"\n",
+    "print(f\"Hallo my name is, {full_name.title()}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tpython\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\tpython\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Languages:\n",
+      "Python\n",
+      "C\n",
+      "JavaScript\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Languages:\\nPython\\nC\\nJavaScript\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Languages:\n",
+      "\tPython\n",
+      "\tC\n",
+      "\tJavaScript\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Languages:\\n\\tPython\\n\\tC\\n\\tJavaScript\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "favourite_language=\"python \"\n",
+    "favourite_language\n",
+    "favourite_language.rstrip()\n",
+    "favourite_language\n",
+    "favourite_language=favourite_language.rstrip()\n",
+    "favourite_language"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Ali Moha'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_name=\"ali\"\n",
+    "last_name=\"moha\"\n",
+    "full_name=f\" {first_name} {last_name}\"\n",
+    "full_name.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo my name is  Ali Moha!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name=\"ali\"\n",
+    "last_name=\"moha\"\n",
+    "full_name=f\" {first_name} {last_name}\"\n",
+    "full_name.title()\n",
+    "print(f\"Hallo my name is {full_name.title()}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_language=(\"Python  \")\n",
+    "best_language\n",
+    "best_language.rstrip()\n",
+    "best_language=best_language.rstrip()\n",
+    "best_language"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_language=(\"  Python\")\n",
+    "best_language\n",
+    "best_language.lstrip()\n",
+    "best_language=best_language.lstrip()\n",
+    "best_language"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'github.com'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "github_url=\"https://github.com\"\n",
+    "github_url.removeprefix(\"https://\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Eric, would you like to learn some Python today?'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name=\"eric\"\n",
+    "msg =f\"Hello {name.title()}, would you like to learn some Python today?\"\n",
+    "msg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abu\n",
+      "ABU\n",
+      "Abu\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"abu\"\n",
+    "print(name.lower())\n",
+    "print(name.upper())\n",
+    "print(name.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albert Einstein once said, \"A person who never made a mistake never tried anything new.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Albert Einstein once said, \"A person who never made a mistake never tried anything new.\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albert Einsten once said, \"A person who never made a mistake never tried anything new.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "famous_person=(\"Albert Einsten\")\n",
+    "message=f'{famous_person} once said, \"A person who never made a mistake never tried anything new.\"'\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_language:\n",
+      "\tkiswahili\n",
+      "\tenglish\n",
+      "\tarabic\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"best_language:\\n\\tkiswahili\\n\\tenglish\\n\\tarabic\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ron\n",
+      "Tyler\n",
+      "Dani\n"
+     ]
+    }
+   ],
+   "source": [
+    "names=[\"ron\",\"tyler\",\"dani\"]\n",
+    "print(names[0].title())\n",
+    "print(names[1].title())\n",
+    "print(names[2].title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Ron\n",
+      "Hello, Tyler\n",
+      "Hello, Dani\n"
+     ]
+    }
+   ],
+   "source": [
+    "names=[\"ron\",\"tyler\",\"dani\"]\n",
+    "msg=f\"Hello, {names[0].title()}\"  \n",
+    "print(msg) \n",
+    "msg=f\"Hello, {names[1].title()}\"\n",
+    "print(msg)\n",
+    "msg=f\"Hello, {names[2].title()}\"\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ron, please come for dinner\n",
+      "Tyler, please come for dinner\n",
+      "Dani, please come for dinner\n"
+     ]
+    }
+   ],
+   "source": [
+    "guest=[\"ron\",\"tyler\",\"dani\"]\n",
+    "name=guest[0].title()\n",
+    "print(f\"{name}, please come for dinner\")\n",
+    "name=guest[1].title()\n",
+    "print(f\"{name}, please come for dinner\")\n",
+    "name=guest[2].title()\n",
+    "print(f\"{name}, please come for dinner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['audi', 'bmw', 'subaru', 'toyota']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars=[\"bmw\",\"audi\",\"toyota\",\"subaru\"]\n",
+    "cars.sort()\n",
+    "print(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['toyota', 'subaru', 'bmw', 'audi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars=[\"bmw\",\"audi\",\"toyota\",\"subaru\"]\n",
+    "cars.sort(reverse=True)\n",
+    "print(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the original list:\n",
+      "['bmw', 'audi', 'toyota', 'subaru']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars=[\"bmw\",\"audi\",\"toyota\",\"subaru\"]\n",
+    "print(\"Here is the original list:\")\n",
+    "print(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\\Here is the original list:\n",
+      "['audi', 'bmw', 'subaru', 'toyota']\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "cars=[\"bmw\",\"audi\",\"toyota\",\"subaru\"]\n",
+    "print(\"n\\Here is the original list:\")\n",
+    "print(sorted(cars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice, that was a great trick!\n",
+      "David, that was a great trick!\n",
+      "Carolina, that was a great trick!\n"
+     ]
+    }
+   ],
+   "source": [
+    "magicians=[\"alice\",\"david\",\"carolina\"]\n",
+    "for magician in magicians:\n",
+    "    print(f\"{magician.title()}, that was a great trick!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the best magician, my name is Alice.\n",
+      "\n",
+      "I am the best magician, my name is David.\n",
+      "\n",
+      "I am the best magician, my name is Carolina.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "magicians=[\"alice\",\"david\",\"carolina\"]\n",
+    "for magician in magicians:\n",
+    "    print(f\"I am the best magician, my name is {magician.title()}.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice, that was a great trick!\n",
+      "I can't wait to see your next trick, Alice.\n",
+      "\n",
+      "David, that was a great trick!\n",
+      "I can't wait to see your next trick, David.\n",
+      "\n",
+      "Carolina, that was a great trick!\n",
+      "I can't wait to see your next trick, Carolina.\n",
+      "\n",
+      "Thank you, everyone. That was a great magic show!\n"
+     ]
+    }
+   ],
+   "source": [
+    "magicians=[\"alice\",\"david\",\"carolina\"]\n",
+    "for magician in magicians:\n",
+    "    print(f\"{magician.title()}, that was a great trick!\")\n",
+    "    print(f\"I can't wait to see your next trick, {magician.title()}.\\n\")\n",
+    "\n",
+    "print(\"Thank you, everyone. That was a great magic show!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Range function\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in range(1,5):\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=list(range(1,6))\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_numbers=list(range(2,21,2))\n",
+    "print(even_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares=[]\n",
+    "for value in range(1,11):\n",
+    "    square=value**2\n",
+    "    squares.append(square)\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares=[]\n",
+    "for value in range(1,11):\n",
+    "    squares.append(value**2)\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares=[value**2 for value in range(1,11)]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the first three players on my team:\n",
+      "Charles\n",
+      "Martina\n",
+      "Michael\n"
+     ]
+    }
+   ],
+   "source": [
+    "players=[\"charles\",\"martina\",\"michael\",\"florence\",\"eli\"]\n",
+    "\n",
+    "a=(\"Here are the first three players on my team:\")\n",
+    "print(a)\n",
+    "for player in players[:3]:\n",
+    "    print(player.title())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your admission cost is $40.\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=40\n",
+    "if age <4:\n",
+    "    price=0\n",
+    "elif age< 18:\n",
+    "    price=25\n",
+    "elif age<65:\n",
+    "    price=40\n",
+    "else:\n",
+    "    price=20\n",
+    "\n",
+    "print(f\"Your admission cost is ${price}.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding mushrooms\n",
+      "Adding extra cheese\n",
+      "\n",
+      "Finished making your pizza\n"
+     ]
+    }
+   ],
+   "source": [
+    "requested_toppings=[\"mushrooms\",\"extra cheese\"]\n",
+    "\n",
+    "if \"mushrooms\" in requested_toppings:\n",
+    "    print(\"Adding mushrooms\")\n",
+    "if \"pepperoni\" in requested_toppings:\n",
+    "    print(\"Adding pepperoni\")\n",
+    "if \"extra cheese\" in requested_toppings:\n",
+    "    print(\"Adding extra cheese\")\n",
+    "\n",
+    "print(\"\\nFinished making your pizza\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding mushrooms.\n",
+      "Sorry,we don't have french fries.\n",
+      "Adding extra cheese.\n",
+      "n\\Finished making your pizza\n"
+     ]
+    }
+   ],
+   "source": [
+    "available_toppings=[\"mushrooms\",\"olives\",\"green peppers\",\n",
+    "                    \"pepperoni\",\"pineapple\",\"extra cheese\"]\n",
+    "requested_toppings=[\"mushrooms\",\"french fries\",\"extra cheese\"]\n",
+    "for requested_topping in requested_toppings:\n",
+    "    if requested_topping in available_toppings:\n",
+    "        print(f\"Adding {requested_topping}.\")\n",
+    "    else:\n",
+    "        print(f\"Sorry,we don't have {requested_topping}.\")\n",
+    "        \n",
+    "print(\"n\\Finished making your pizza\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
