--- a/gathungunov.ipynb
+++ b/gathungunov.ipynb
@@ -2163,6 +2163,202 @@
    "source": [
     "Friends.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_19316\\3664377179.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2024-02-14 08:36:05.542830', '2024-02-15 08:36:05.542830',\n",
+       "               '2024-02-16 08:36:05.542830', '2024-02-17 08:36:05.542830',\n",
+       "               '2024-02-18 08:36:05.542830', '2024-02-19 08:36:05.542830'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dates=pd.date_range(\"today\",periods=6)\n",
+    "dates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Revision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Hello Eric,would you like to learn some Python today?\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=(\"eric\")\n",
+    "name.title()\n",
+    "msg=(f\" Hello {name.title()},would you like to learn some Python today?\")\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eric\n",
+      "ERIC\n",
+      "Eric\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(\"eric\")\n",
+    "print(a.lower())\n",
+    "print(a.upper())\n",
+    "print(a.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albert Einstein, “A person who never made a mistake never tried anything new.”\n"
+     ]
+    }
+   ],
+   "source": [
+    "famous_person=(\"Albert Einstein\")\n",
+    "message= f'{famous_person}, “A person who never made a mistake never tried anything new.”'\n",
+    "print(message)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eric,“A person who never made a mistake never tried anything new.”\n"
+     ]
+    }
+   ],
+   "source": [
+    "famous=(\"eric\")\n",
+    "message = f'{famous.title()},“A person who never made a mistake never tried anything new.”'\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo, Shabaan Roberts!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name=(\"shabaan\")\n",
+    "last_name=(\"roberts\")\n",
+    "full_name=f\"Hallo, {first_name} {last_name}!\"\n",
+    "print(full_name.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo, Shabaan Roberts\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_name=(\"shabaan\")\n",
+    "last_name=(\"roberts\")\n",
+    "full_name=f\"{first_name} {last_name}\"\n",
+    "message=f\"Hallo, {full_name.title()}\"\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shabaan Roberts\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg=(\"Hallo, Shabaan Roberts\")\n",
+    "msg.removeprefix(\"Hallo, \")\n",
+    "new_msg=msg.removeprefix(\"Hallo, \")\n",
+    "print(new_msg)"
+   ]
   }
  ],
  "metadata": {
